--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="css/loginstyle.css">
+    <link rel="stylesheet" href="loginstyle.css">
 
 </head>
 
@@ -35,7 +35,7 @@
     <div class="container">
 
         <div class="logo">
-            <img src="img/timon.png" alt="">
+            <img src="timon.png" alt="">
         </div>
         <div class="titulo">Iniciar sesión</div>
 
